plugins {
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    // Live webcam capture (cross-platform API)
    implementation 'com.github.sarxos:webcam-capture:0.3.12'

    // sarxos' default driver ships an x86_64-only native lib (libbridj) that fails
    // to load on Apple Silicon. OpenPnP's capture lib ships true arm64 macOS natives,
    // so we adapt it into a sarxos WebcamDriver (see OpenPnpDriver.java).
    implementation 'org.openpnp:openpnp-capture-java:0.0.28-0'
    implementation 'net.java.dev.jna:jna:5.14.0'

    // Pure-Java H.264 / MP4 encoding — replaces the long-dead Xuggle library.
    // No native dependencies, so it works on Apple Silicon, Intel, Windows, Linux.
    implementation 'org.jcodec:jcodec:0.2.5'
    implementation 'org.jcodec:jcodec-javase:0.2.5'

    // Quiet SLF4J binding so the console isn't spammed with "no logger" warnings.
    implementation 'org.slf4j:slf4j-simple:1.7.36'
}

java {
    // Build with whatever JDK is on PATH (tested on 24); emit 17-compatible bytecode.
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

application {
    mainClass = 'StopMotionGUI'
}

tasks.named('run') {
    // Swing apps need a real display; ignore exit value so Ctrl-C doesn't show as failure.
    ignoreExitValue = true
}
